### 1.9.2
==================

Bug fixes:
- Fixed a crash when unequipping items (bug #16)
- Fixed an auto-completion crash bug (bug #24)

New features:
- Added AI::Homunculus module for homunculus AI support with automated homunculus
  feeding, following, and attacking (see new config options and commands)
- Support for homunculus skills in skills.txt (use normal skill blocks to use them)

New config options:
- attackChangeTarget <boolean flag>
    automatically change target to an aggressive monster if the target monster is
    not yet reached or damaged. This prevents you from continuously routing to your
    target while dragging a mob of aggressive monsters behind you
- homunculus_resurrectAuto <flag>
    automatically resurrects your homunculus when it dies.
    1: use resurrection only when there are no aggressives
    2: use resurrection even if there are aggressive monsters
- homunculus_followDistanceMax <distance>
- homunculus_followDistanceMin <distance>
    Kore and the homunculus will always try to keep within these distances
    from each other
- homunculus_attackAuto <flag>
- homunculus_attackAuto_party <flag>
- homunculus_attackAuto_notInTown <boolean flag>
- homunculus_attackAuto_onlyWhenSafe <boolean flag>
- homunculus_attackDistance <distance>
- homunculus_attackMaxDistance <distance>
- homunculus_attackMaxRouteTime <seconds>
- homunculus_attackMinPlayerDistance <distance>
- homunculus_attackMinPortalDistance <distance>
- homunculus_attackCanSnipe <boolean flag>
- homunculus_attackCheckLOS <boolean flag>
- homunculus_attackNoGiveup <boolean flag>
    same as the attackAuto* counterparts.
- homunculus_attackChangeTarget <boolean flag>
    same as attackChangeTarget
- homunculus_route_step <number>
    this option is required or your homunculus will not be able to move
- homunculus_runFromTarget <boolean flag>
- homunculus_runFromTarget_dist <distance>
    these will mostly be not needed but they are still included for posterity